add request handler + web assets for testing

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,9 +8,13 @@ set(CMAKE_CXX_STANDARD_REQUIRED True)
 
 include_directories(src/simple_server)
 
+#Copy test_assets content include index.html file.
+file(COPY test_assets/index.html DESTINATION .)
+
 add_executable(main 
     src/main.cpp 
     src/simple_server/simple_server.cpp
     src/simple_server/http_request.cpp
     src/simple_server/http_response.cpp
+    src/simple_server/request_manager.cpp
     src/simple_server/utils.cpp)
